# eval_llm

./: kv_cache.py  main.py  prompt.txt  pyproject.toml  qwen.py  test.py  test_kv_offload.py  test_qwen.py
kv_offload/: __init__.py  cpu_cache.py  gpu_cache.py  hybrid_attention.py  indexer.py  offload_manager.py  retriever.py
models/: gemma.py  ministral.py  ministral_origin.py  qwen.py  qwen_origin.py  utils.py
origin_outputs/20260107_100255/predictions/home_wpc_huggingface_Qwen3-8B/: mmlu_abstract_algebra.jsonl  mmlu_anatomy.jsonl  mmlu_business_ethics.jsonl  mmlu_clinical_knowledge.jsonl  mmlu_college_biology.jsonl  mmlu_college_chemistry.jsonl  mmlu_college_mathematics.jsonl  mmlu_college_medicine.jsonl  mmlu_college_physics.jsonl  mmlu_computer_security.jsonl  mmlu_econometrics.jsonl  mmlu_elementary_mathematics.jsonl  mmlu_formal_logic.jsonl  mmlu_high_school_macroeconomics.jsonl  mmlu_high_school_mathematics.jsonl  mmlu_high_school_microeconomics.jsonl  mmlu_high_school_statistics.jsonl  mmlu_human_sexuality.jsonl  mmlu_machine_learning.jsonl  mmlu_management.jsonl  mmlu_marketing.jsonl  mmlu_medical_genetics.jsonl  mmlu_miscellaneous.jsonl  mmlu_moral_disputes.jsonl  mmlu_philosophy.jsonl  mmlu_prehistory.jsonl  mmlu_security_studies.jsonl  mmlu_sociology.jsonl  mmlu_virology.jsonl
origin_outputs/20260107_100255/reports/home_wpc_huggingface_Qwen3-8B/: mmlu.json
outputs/20260107_100255/configs/: task_config_fa2955.yaml
outputs1/20260331_155618/configs/: task_config_9da1a7.yaml
outputs2/20260402_111707/configs/: task_config_8e0f0f.yaml
(+143 files in other folders)
